--- a/src/main/resources/templates/colour.html
+++ b/src/main/resources/templates/colour.html
@@ -51,6 +51,7 @@
             <input
               type="range"
               class="form-range border-bottom border-secondary range-with-spacing"
+              value="0"
               min="0"
               max="179"
               id="hueMin"
@@ -60,6 +61,7 @@
             <input
               type="range"
               class="form-range border-bottom border-secondary range-with-spacing"
+              value="0"
               min="0"
               max="255"
               id="satMin"
@@ -69,6 +71,7 @@
             <input
               type="range"
               class="form-range border-bottom border-secondary range-with-spacing"
+              value="0"
               min="0"
               max="255"
               id="valMin"
@@ -78,6 +81,7 @@
             <input
               type="range"
               class="form-range border-bottom border-secondary range-with-spacing"
+              value="179"
               min="0"
               max="179"
               id="hueMax"
@@ -87,6 +91,7 @@
             <input
               type="range"
               class="form-range border-bottom border-secondary range-with-spacing"
+              value="255"
               min="0"
               max="255"
               id="satMax"
@@ -96,6 +101,7 @@
             <input
               type="range"
               class="form-range range-with-spacing"
+              value="255"
               min="0"
               max="255"
               id="valMax"
