Add drop items actions utility, fix colour picker performance

--- a/src/main/resources/templates/colour.html
+++ b/src/main/resources/templates/colour.html
@@ -71,12 +71,12 @@
               <h6 class="text-uppercase text-muted border-bottom pb-2 mb-3">Hue (0-179)</h6>
               <div class="slider-row">
                 <span class="slider-label">Min</span>
-                <input type="range" class="form-range" id="hueMin" min="0" max="179" value="0">
+                <input type="range" class="form-range" id="hueMin" min="0" max="179" value="0" autocomplete="off">
                 <span class="slider-val" id="val-hueMin">0</span>
               </div>
               <div class="slider-row">
                 <span class="slider-label">Max</span>
-                <input type="range" class="form-range" id="hueMax" min="0" max="179" value="179">
+                <input type="range" class="form-range" id="hueMax" min="0" max="179" value="179" autocomplete="off">
                 <span class="slider-val" id="val-hueMax">179</span>
               </div>
             </div>
@@ -86,12 +86,12 @@
               <h6 class="text-uppercase text-muted border-bottom pb-2 mb-3">Saturation (0-255)</h6>
               <div class="slider-row">
                 <span class="slider-label">Min</span>
-                <input type="range" class="form-range" id="satMin" min="0" max="255" value="0">
+                <input type="range" class="form-range" id="satMin" min="0" max="255" value="0" autocomplete="off">
                 <span class="slider-val" id="val-satMin">0</span>
               </div>
               <div class="slider-row">
                 <span class="slider-label">Max</span>
-                <input type="range" class="form-range" id="satMax" min="0" max="255" value="255">
+                <input type="range" class="form-range" id="satMax" min="0" max="255" value="255" autocomplete="off">
                 <span class="slider-val" id="val-satMax">255</span>
               </div>
             </div>
@@ -101,12 +101,12 @@
               <h6 class="text-uppercase text-muted border-bottom pb-2 mb-3">Value (0-255)</h6>
               <div class="slider-row">
                 <span class="slider-label">Min</span>
-                <input type="range" class="form-range" id="valMin" min="0" max="255" value="0">
+                <input type="range" class="form-range" id="valMin" min="0" max="255" value="0" autocomplete="off">
                 <span class="slider-val" id="val-valMin">0</span>
               </div>
               <div class="slider-row">
                 <span class="slider-label">Max</span>
-                <input type="range" class="form-range" id="valMax" min="0" max="255" value="255">
+                <input type="range" class="form-range" id="valMax" min="0" max="255" value="255" autocomplete="off">
                 <span class="slider-val" id="val-valMax">255</span>
               </div>
             </div>
